fixed nullrefs when targets went out of screen, removed deprecated code, started with a displaying highscores

--- a/MooreGeoSolution/MooreGeoProject/public/StyleSheet.css
+++ b/MooreGeoSolution/MooreGeoProject/public/StyleSheet.css
@@ -54,11 +54,6 @@ div#game {
 }
 
 #commonTarget {
-    /*width: 15px;
-    height: 15px;*/
-    /*background-color: mintcream;*/
-    background-color: chartreuse;
-    position: absolute;
 }
 
 .target {
